--- a/room/room-manage/pom.xml
+++ b/room/room-manage/pom.xml
@@ -9,30 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>room-generator</artifactId>
+    <artifactId>room-manage</artifactId>
 
     <description>
-        generator代码生成
+        manage酒店管理模块
     </description>
 
     <dependencies>
-
-        <!-- velocity代码生成使用模板 -->
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-engine-core</artifactId>
-        </dependency>
 
         <!-- 通用工具-->
         <dependency>
             <groupId>com.lz</groupId>
             <artifactId>room-common</artifactId>
-        </dependency>
-
-        <!-- 阿里数据库连接池 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
     </dependencies>
