--- a/room/room-system/pom.xml
+++ b/room/room-system/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>room</artifactId>
-        <groupId>com.room</groupId>
+        <groupId>com.lz</groupId>
         <version>3.8.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
 
         <!-- 通用工具-->
         <dependency>
-            <groupId>com.room</groupId>
+            <groupId>com.lz</groupId>
             <artifactId>room-common</artifactId>
         </dependency>
 
