--- a/room/room-manage/pom.xml
+++ b/room/room-manage/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>room-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.lz</groupId>
+            <artifactId>room-system</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
