自动更新房间状态

--- a/room/room-quartz/pom.xml
+++ b/room/room-quartz/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>room-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.lz</groupId>
+            <artifactId>room-manage</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
